.helm/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: netology-demo-svc
spec:
  selector:
    app: netology-demo
  ports:
  - name: frontend
    port: 80
