.helm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netology-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.smutosey.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netology-demo-svc
            port:
              number: 80
